# ai-genai-human-in-the-loop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: application-dev.yaml  application-prod.yaml  application.yaml
src/human_in_the_loop/: __init__.py  main.py
src/human_in_the_loop/api/: router.py
src/human_in_the_loop/approval/: gate.py
src/human_in_the_loop/audit/: trail.py
src/human_in_the_loop/config/: settings.py
src/human_in_the_loop/escalation/: manager.py
src/human_in_the_loop/learning/: active_learner.py  threshold_tuner.py
src/human_in_the_loop/models/: schemas.py
src/human_in_the_loop/queue/: review_queue.py
src/human_in_the_loop/utils/: logger.py
tests/: __init__.py  test_approval.py
